Have intuitive reuse of the zoom bubble for extension initiated zoom changes

The current logic for reusing the zoom bubble for extensions
1) prevents an extension initiated zoom change from reusing the zoom
bubble even when the bubble is showing for a previous zoom change by the
same extension, and
2) attributes a user initiated zoom to an extension if the extension
recently initiated a zoom change.

The logic for reuse is now essentially, allow reuse if the attribution
hasn't changed.

Bug: 849704
Change-Id: Ia4935fa84e30ab263772500f7ca566c0f5fc29be
Reviewed-on: https://chromium-review.googlesource.com/1124945
Commit-Queue: Kevin McNee <mcnee@chromium.org>
Reviewed-by: Peter Kasting <pkasting@chromium.org>
Cr-Commit-Position: refs/heads/master@{#573423}
Former-commit-id: db1b9c39beb36f103ad1034346c645f3d502aaa7